[package]
name = "archipelago_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0.16"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = "1.47.1"
# https://github.com/SvizelPritula/tungstenite-rs/tree/permessage-deflate 
# Switch tungstenite to the above if you need compressed websockets. Maybe this'll get merged in the future
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tungstenite = "0.27.0"
log = { version = "0.4.28" }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
