[package]
name = "archipelago_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0.17"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = "1.48"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28"
bitflags = { version = "2.10.0" }
serde_with = "3.16.1"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["rt", "macros"] }
